# inf-preparation-2-legobatkata

./: CMakeLists.txt  README.md
src/: main.cpp  solution.cpp  solution.h
test/: solution_tests.cpp
